refactor: Updated methods to accept role. Now the admin can update many permissions using role
